--- a/index.html
+++ b/index.html
@@ -14,55 +14,25 @@
 <article>
 
     <h1 class="title" property="foaf:name">Luca Matteis</h1>
-    <!--<h2 class="subtitle">Web Developer</h2>-->
-    <hr/>
 
-    <p class="section" property="rdfs:comment">
-        
+
+    <section>
+    <p property="rdfs:comment">
+    I'm passionate about <a href="https://en.wikipedia.org/wiki/Decentralised_system">decentralized systems</a> and anything that is <a href="https://en.wikipedia.org/wiki/Peer-to-peer">peer-to-peer</a> and <a href="https://scholar.google.com/scholar?q=censorship+resistant">censorship resistant</a>.
+    </p>
+    <p property="rdfs:comment">
+    Towards that passion I try to move the current state of the art forward by designing (<a href="http://lucaa.org/docs/kudos.pdf">Kudos</a>) and building (<a href="https://github.com/lmatteis/peer-tweet">PeerTweet</a>) stuff.
+    </p>
+    <p property="rdfs:comment">
+    I'm also a strong believer in the scientific method and I contribute <a href="https://scholar.google.com/citations?user=4shOPsgAAAAJ">several peer-reviewed papers</a> that evaluate my ideas and implementations.
     </p>
 
+    <p>
 
-    <p class="section none">
-        <span class="left">id</span>
-        <a href="http://lucaa.org/">http://lucaa.org/</a> (I contain RDFa)
+      You can find more about me on <a property="foaf:homepage" href="https://github.com/lmatteis">GitHub</a> or get in contact with me on <a property="foaf:homepage" href="https://twitter.com/lmatteis">Twitter</a>.
+
     </p>
-    <p class="section none">
-        <span property="foaf:mbox">lmatteis -at- gmail.com
-</span>
-        <span class="left">email</span>
-    </p>
-
-    <hr/>
-
-    <p property="rdfs:comment">I'm passionate about the Semantic Web and interfaces that autonomously shape from RDF structures. Specifically I'm interested in technologies that enable information from different sources to be easily combined such as Linked Data. My end goal is to help people answer complicated questions. Questions that cannot be answered by Google or other search engines because they require large quantities of interconnected data (not just documents) from multiple sources. </p>
-    <p property="rdfs:comment">I'm also interested in peer-to-peer (P2P) technologies which have been exploited for sharing large files (BitTorrent), for live communication (Skype), and for digital currency (Bitcoin). However, P2P technologies have not been exploited for a myriad of other applications where decentralization is needed. My passion and possibly my future research goal is to investigate whether applications that have been successful using the client-server model (Facebook, Reddit, Twitter) can be built in a trustless manner using P2P networks.</p>
-
-    <h2>Publications</h2>
-    <ul>
-        <li>
-Luca Matteis. &ldquo;<a property="foaf:publications" href="docs/kudos.pdf">Kudos: A Peer-to-Peer Discussion System
-Based on Social Voting</a>&rdquo;. <em>July, 2015</em>.
-        </i>
-        <li>
-Luca Matteis, Aidan Hogan, Roberto Navigli. &ldquo;<a property="foaf:publications" href="docs/keyword-navigation-ldow2015.pdf">Keyword-Based Navigation and Search over the Linked Data Web</a>&rdquo;. In the Proceedings of the <em>Linked Data on the Web Workshop (LDOW 2015) at WWW 2015, Florence, Italy, May 19, 2015</em>.
-        </i>
-        <li>
-McCrae, John P., Philipp Cimiano, Victor Rodrıguez Doncel, Daniel Vila-Suero, Jorge Gracia, Luca Matteis, Roberto Navigli et al. &ldquo;<a property="foaf:publications" href="http://www.aclweb.org/anthology/W/W15/W15-42.pdf#page=51">Reconciling Heterogeneous Descriptions of Language Resources</a>&rdquo;. <em>ACL-IJCNLP 2015 (2015): 39</em>.        </i>
-        <li>Luca Matteis, Ruben Verborgh. &ldquo;<a property="foaf:publications" href="http://ceur-ws.org/Vol-1268/paper3.pdf">Hosting Queryable and Highly Available Linked Data for Free</a>.&rdquo; <em>ISWC Developers Workshop (ISWC-dev) at ISWC 2014</em> (2014).</li>
-        <li>Luca Matteis. &ldquo;<a property="foaf:publications" href="http://arxiv.org/pdf/1408.6691v1.pdf">VoID-graph: Visualize Linked Datasets on the Web</a>.&rdquo; <em>arXiv preprint arXiv:1408.6691</em> (2014).</li>
-        <li>Luca Matteis. &ldquo;<a property="foaf:publications" href="http://arxiv.org/pdf/1408.4793v1.pdf">Restpark: Minimal RESTful API for Retrieving RDF Triples.</a>&rdquo; <em>arXiv preprint arXiv:1408.4793</em> (2013).</li>
-        <li>Luca Matteis, Pierre-Yves Chibon, Herlin Espinosa, Milko Skofic, Richard Finkers, Richard Bruskiewich, Glenn Hyman, and Elizabeth Arnaud. &ldquo;<a property="foaf:publications" href="http://ceur-ws.org/Vol-979/WS_s4biodiv2013_paper_4.pdf">Crop Ontology: Vocabulary For Crop-related Concepts.</a>&rdquo; <em>Semantics for Biodiversity Workshop (S4BioDiv 2013) at ESWC 2013.</em> (2013): 37.</li>
-    </ul>
-    
-    <h2>Other</h2>
-    <ul class="nomargin">
-        <li><a property="foaf:homepage" href="http://scholar.google.com/citations?user=4shOPsgAAAAJ">Google Scholar</a></li>
-        <li><a property="foaf:homepage" href="http://stackoverflow.com/users/50394/luca-matteis">Stack Overflow</a></li>
-        <li><a property="foaf:homepage" href="https://github.com/lmatteis">GitHub</a></li>
-        <li><a property="foaf:homepage" href="http://bitcoin.stackexchange.com/users/8717/luca-matteis">Bitcoin Stack Exchange</a></li>
-        <li><a property="foaf:homepage" href="https://twitter.com/lmatteis">Twitter</a></li>
-
-    </ul>
+    </section>
 
     <div style="display:none;" property="foaf:knows" resource="http://aidanhogan.com/foaf.rdf#me"></div>
     <div style="display:none;" property="foaf:knows" resource="http://www.kjetil.kjernsmo.net/foaf#me"></div>
