--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     I'm passionate about <a href="https://en.wikipedia.org/wiki/Decentralised_system">decentralized systems</a> and anything that is <a href="https://en.wikipedia.org/wiki/Peer-to-peer">peer-to-peer</a> and <a href="https://scholar.google.com/scholar?q=censorship+resistant">censorship resistant</a>.
     </p>
     <p property="rdfs:comment">
-    Towards that passion I try to move the current state of the art forward by designing (<a href="http://lucaa.org/docs/kudos.pdf">Kudos</a>) and building (<a href="https://github.com/lmatteis/peer-tweet">PeerTweet</a>) stuff.
+    Following this passion I try to move the current state of the art forward by designing (<a href="http://lucaa.org/docs/kudos.pdf">Kudos</a>) and building (<a href="https://github.com/lmatteis/peer-tweet">PeerTweet</a>) stuff.
     </p>
     <p property="rdfs:comment">
     I'm also a strong believer in the scientific method and I contribute <a href="https://scholar.google.com/citations?user=4shOPsgAAAAJ">several peer-reviewed papers</a> that evaluate my ideas and implementations.
