--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     I'm passionate about <a href="https://en.wikipedia.org/wiki/Decentralised_system">decentralized systems</a> and anything that is <a href="https://en.wikipedia.org/wiki/Peer-to-peer">peer-to-peer</a> and <a href="https://scholar.google.com/scholar?q=censorship+resistant">censorship resistant</a>.
     </p>
     <p property="rdfs:comment">
-    Following this passion I try to move the current state of the art forward by designing (<a href="http://lucaa.org/docs/kudos.pdf">Kudos</a>) and building (<a href="https://github.com/lmatteis/peer-tweet">PeerTweet</a>) stuff.
+    Following this passion, I try to move the current state of the art forward by designing (<a href="http://lucaa.org/docs/kudos.pdf">Kudos</a>) and building (<a href="https://github.com/lmatteis/peer-tweet">PeerTweet</a>) stuff.
     </p>
     <p property="rdfs:comment">
-    I'm also a strong believer in the scientific method and I contribute <a href="https://scholar.google.com/citations?user=4shOPsgAAAAJ">several peer-reviewed papers</a> that evaluate my ideas and implementations.
+    I'm also a strong believer in the scientific method and I contribute to <a href="https://scholar.google.com/citations?user=4shOPsgAAAAJ">several peer-reviewed papers</a> that evaluate my ideas and implementations.
     </p>
 
     <p>
 
-      You can find more about me on <a property="foaf:homepage" href="https://github.com/lmatteis">GitHub</a> or get in contact with me on <a property="foaf:homepage" href="https://twitter.com/lmatteis">Twitter</a>.
+      You can learn more about me on <a property="foaf:homepage" href="https://github.com/lmatteis">GitHub</a> or get in contact with me on <a property="foaf:homepage" href="https://twitter.com/lmatteis">Twitter</a>.
 
     </p>
     </section>
