--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
 
 
     <section>
-    <p property="rdfs:comment">
-    I'm passionate about <a href="https://en.wikipedia.org/wiki/Decentralised_system">decentralized systems</a> and anything that is <a href="https://en.wikipedia.org/wiki/Peer-to-peer">peer-to-peer</a> and <a href="https://scholar.google.com/scholar?q=censorship+resistant">censorship resistant</a>.
-    </p>
-    <p property="rdfs:comment">
-    Following this passion, I try to move the current state of the art forward by designing (<a href="http://lucaa.org/docs/kudos.pdf">Kudos</a>) and building (<a href="https://github.com/lmatteis/peer-tweet">PeerTweet</a>) stuff.
-    </p>
-    <p property="rdfs:comment">
-    I'm also a strong believer in the scientific method and I contribute to <a href="https://scholar.google.com/citations?user=4shOPsgAAAAJ">several peer-reviewed papers</a> that evaluate my ideas and implementations.
-    </p>
+      <p property="rdfs:comment">I'm passionate about the Semantic Web and interfaces that autonomously shape from RDF structures. Specifically I'm interested in technologies that enable information from different sources to be easily combined such as Linked Data. My end goal is to help people answer complicated questions. Questions that cannot be answered by Google or other search engines because they require large quantities of interconnected data (not just documents) from multiple sources.</p>
+
+    <!--<p property="rdfs:comment">-->
+    <!--I'm also passionate about <a href="https://en.wikipedia.org/wiki/Decentralised_system">decentralized systems</a> and anything that is <a href="https://en.wikipedia.org/wiki/Peer-to-peer">peer-to-peer</a> and <a href="https://scholar.google.com/scholar?q=censorship+resistant">censorship resistant</a>.-->
+    <!--</p>-->
+    <!--<p property="rdfs:comment">-->
+    <!--Following this passion, I try to move the current state of the art forward by designing (<a href="http://lucaa.org/docs/kudos.pdf">Kudos</a>) and building (<a href="https://github.com/lmatteis/peer-tweet">PeerTweet</a>) stuff.-->
+    <!--</p>-->
+    <!--<p property="rdfs:comment">-->
+    <!--I'm also a strong believer in the scientific method and I contribute to <a href="https://scholar.google.com/citations?user=4shOPsgAAAAJ">several peer-reviewed papers</a> that evaluate my ideas and implementations.-->
+    <!--</p>-->
 
     <p>
 
