Added blocks url

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <p>
 
-      You can learn more about me on <a property="foaf:homepage" href="https://github.com/lmatteis">GitHub</a> or get in contact with me on <a property="foaf:homepage" href="https://twitter.com/lmatteis">Twitter</a>.
+      You can learn more about me on <a property="foaf:homepage" href="https://github.com/lmatteis">GitHub</a> or get in contact with me on <a property="foaf:homepage" href="https://twitter.com/lmatteis">Twitter</a>. Also check out my <a href="http://bl.ocks.org/lmatteis">bl.ocks</a> page where I try to present data in interesting ways. 
 
     </p>
     </section>
